--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
           </footer>
           <div class="active-state__display">
             <span>SHARE</span>
-            <img src="images/icon-facebook.svg" alt="facebook-icon">
-            <img src="images/icon-twitter.svg" alt="twitter-icon">
-            <img src="images/icon-pinterest.svg" alt="pinterest-icon">
+            <div class="links">
+              <img src="images/icon-facebook.svg" alt="facebook-icon">
+              <img src="images/icon-twitter.svg" alt="twitter-icon">
+              <img src="images/icon-pinterest.svg" alt="pinterest-icon">
+            </div>
             <button class="active-state--btn"><img src="images/icon-share.svg" alt="share-icon"></button>
           </div>
         </div>
