--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+
+  <script defer src="script.js"></script>
 </head>
 
 <body>
@@ -34,9 +36,11 @@
               <h2>Michelle Appleton</h2>
               <span>28 Jun 2020</span>
             </section>
-            <button><img src="images/icon-share.svg" alt="share-icon"></button>
+            <button>
+              <img src="images/icon-share.svg" alt="share-icon">
+            </button>
           </footer>
-          <div class="active-state__display">
+          <div class="active-state__mobile-display">
             <span>SHARE</span>
             <div class="links">
               <img src="images/icon-facebook.svg" alt="facebook-icon">
@@ -44,6 +48,15 @@
               <img src="images/icon-pinterest.svg" alt="pinterest-icon">
             </div>
             <button class="active-state--btn"><img src="images/icon-share.svg" alt="share-icon"></button>
+          </div>
+
+          <div class="active-state__desktop-display">
+            <span>SHARE</span>
+            <div class="links">
+              <img src="images/icon-facebook.svg" alt="facebook-icon">
+              <img src="images/icon-twitter.svg" alt="twitter-icon">
+              <img src="images/icon-pinterest.svg" alt="pinterest-icon">
+            </div>
           </div>
         </div>
 
