--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
 <body>
 
-  <div class="wrapper">
+  <main class="wrapper">
     <div class="container">
       <div class="card">
         <div class="img__container">
           <img src="images/drawers.jpg" alt="image-of-drawers">
         </div>
-        <div class="article__container">
+        <article class="article__container">
           <h1>Shift the overall look and feel by adding these wonderful touches to furniture in your home</h1>
           <p>Ever been in a room and felt like something was missing? Perhaps
             it felt slightly bare and uninviting. I’ve got some simple tips
@@ -40,7 +40,7 @@
               <img src="images/icon-share.svg" alt="share-icon">
             </button>
           </footer>
-          <div class="active-state__mobile-display">
+          <section class="active-state__mobile-display">
             <span>SHARE</span>
             <div class="links">
               <img src="images/icon-facebook.svg" alt="facebook-icon">
@@ -48,22 +48,22 @@
               <img src="images/icon-pinterest.svg" alt="pinterest-icon">
             </div>
             <button class="active-state--btn"><img src="images/icon-share.svg" alt="share-icon"></button>
-          </div>
+          </section>
 
-          <div class="active-state__desktop-display">
+          <section class="active-state__desktop-display">
             <span>SHARE</span>
             <div class="links">
               <img src="images/icon-facebook.svg" alt="facebook-icon">
               <img src="images/icon-twitter.svg" alt="twitter-icon">
               <img src="images/icon-pinterest.svg" alt="pinterest-icon">
             </div>
-          </div>
-        </div>
+          </section>
+        </article>
 
       </div>
     </div>
 
-  </div>
+  </main>
 
 </body>
 
