--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <main class="wrapper">
     <div class="container">
       <div class="card">
-        <div class="img__container">
+        <article class="img__container">
           <img src="images/drawers.jpg" alt="image-of-drawers">
-        </div>
+        </article>
         <article class="article__container">
           <h1>Shift the overall look and feel by adding these wonderful touches to furniture in your home</h1>
           <p>Ever been in a room and felt like something was missing? Perhaps
